# fastapi-tdd-docker

./: README.md
.github/workflows/: main.yml
project/: .coverage  Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml
project/app/: db.py  main.py
project/app/api/: crud.py  summaries.py
project/htmlcov/: app___init___py.html  app_api_crud_py.html  app_api_ping_py.html  app_api_summaries_py.html  app_config_py.html  app_db_py.html  app_main_py.html  app_models_pydantic_py.html  app_models_tortoise_py.html  index.html  status.json
project/tests/: conftest.py  test_ping.py  test_summaries.py  test_summaries_unit.py
