[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = ""
authors = ["Mike Janoski <maj@mikejanoski.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.63.0"
uvicorn = "0.13.4"
asyncpg = "0.22.0"
tortoise-orm = "0.16.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
