[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = ""
authors = ["Mike Janoski <maj@mikejanoski.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
asyncpg = "0.22.0"
tortoise-orm = "0.16.21"
pytest = "6.2.2"
requests = "2.25.1"
gunicorn = "20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
